--- a/MvcGraduate/MvcGraduate/MvcGraduate.csproj
+++ b/MvcGraduate/MvcGraduate/MvcGraduate.csproj
@@ -547,7 +547,6 @@
     <Content Include="Views\NotifyNews\Detail_Notify.cshtml" />
     <Content Include="Views\NotifyNews\GetSchoolNotify.cshtml" />
     <Content Include="Views\NotifyNews\Details_Notify_School.cshtml" />
-    <Content Include="Views\Interaction\GetShareImagesPeopleName.cshtml" />
     <Content Include="Views\Interaction\Details_Images.cshtml" />
     <Content Include="Views\Interaction\GetArticle.cshtml" />
     <Content Include="Views\Interaction\Details_Article.cshtml" />
@@ -555,6 +554,9 @@
     <Content Include="Views\Interaction\Edit_Images.cshtml" />
     <Content Include="Views\Interaction\GetQuestions.cshtml" />
     <Content Include="Views\Interaction\Details_Question.cshtml" />
+    <Content Include="Views\Interaction\GetShareArticle.cshtml" />
+    <Content Include="Views\Interaction\GetImagesInfo.cshtml" />
+    <Content Include="Views\Interaction\GetShareImagesInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
