编辑功能都实现了。 遇到的问题：双引号里面包含双引号的问题，要注意。 ModelState问题：有时会显示老的数据。一般在一开始创建view的时候就固定了，后面修改要Clear或者Remove。 Static方法问题：用Static访问数据库，会有缓存，无法读取到最新的数据库信息。。不知道如何解决？

--- a/MvcGraduate/MvcGraduate/MvcGraduate.csproj
+++ b/MvcGraduate/MvcGraduate/MvcGraduate.csproj
@@ -641,6 +641,7 @@
     <Content Include="Views\Interaction\GetImagesComments.cshtml" />
     <Content Include="Views\Interaction\GetShareImagesComments.cshtml" />
     <Content Include="Views\Interaction\Edit_Images.cshtml" />
+    <Content Include="Views\Interaction\SaveImageChange.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
