主页修复完成，各种效果基本实现。 下面着手登陆

--- a/MvcGraduate/MvcGraduate/MvcGraduate.csproj
+++ b/MvcGraduate/MvcGraduate/MvcGraduate.csproj
@@ -643,6 +643,8 @@
     <Content Include="Views\Interaction\SaveChange.cshtml" />
     <Content Include="Views\Interaction\GetArticleComments.cshtml" />
     <Content Include="Views\Interaction\ShareComment.cshtml" />
+    <Content Include="Views\Home\GetQuestion.cshtml" />
+    <Content Include="Views\Home\GetHonour.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
