--- a/MvcGraduate/MvcGraduat/MvcGraduate/MvcGraduate.csproj
+++ b/MvcGraduate/MvcGraduat/MvcGraduate/MvcGraduate.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Models\ListClass.cs" />
     <Compile Include="Models\OperateClass.cs" />
     <Compile Include="Models\SendEamil.cs" />
+    <Compile Include="Models\TeacherClass.cs" />
     <Compile Include="Models\UEditorClass.cs" />
     <Compile Include="Models\ValidateImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -694,6 +695,9 @@
     <Content Include="Views\Account\Details_Register.cshtml" />
     <Content Include="Views\Account\ForgetAccount.cshtml" />
     <Content Include="Views\Account\ResetPwd.cshtml" />
+    <Content Include="Views\TeacherHome\GetHomeWork.cshtml" />
+    <Content Include="Views\TeacherHome\GetValidate.cshtml" />
+    <Content Include="Views\TeacherHome\GetQuestion.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
